# pymusicbrainz

./: LICENSE  README.md  pyproject.toml
pymusicbrainz/: __init__.py  config.py  const.py  model.py  oauth.py  request.py  session.py
tests/: test_lookup.py  test_mbxml_artist.py  test_pymusicbrainz.py
tests/data/artist/: 0e43fe9d-c472-4b62-be9e-55f971a023e1-aliases.xml  b3785a55-2cf6-497d-b8e3-cfa21a36f997-artist-rels.xml
